# cp-assist

./: README.md  cp-assist-cast.webm  default.nix  flake.nix  for_llm.sh  package-lock.json  package.json  plan.xopp  pnpm-lock.yaml  shell.nix  tauri_project_context.txt  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
src/: App.css  App.tsx  Home.tsx  LandingPage.tsx  Languages.ts  Settings.tsx  Titlebar.tsx  commands.tsx  main.tsx
src-tauri/: Cargo.toml  Languages.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  info.rs  judge.rs  language.rs  lib.rs  main.rs  state.rs  submit.rs  utils.rs
src-tauri/test/: main.go  script.groovy
