[package]
name = "cp-assist"
version = "0.3.1"
description = "A Competitive Programming assistant"
authors = ["Ayush Biswas"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cp_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["macos-private-api"] }
tauri-plugin-shell = "2.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.127"
tauri-plugin-dialog = "2.2.2"
actix-web = "4.11.0"
tauri-plugin-http = { version = "2.4.4", features = ["json"] }
toml = { version = "0.8.23", features = ["preserve_order"] }
wait-timeout = "0.2.1"
open = "5.3.2"
boa_engine = "0.20.0"
chrono = "0.4.41"
notify = { version = "8.0.0", features = ["serde"] }

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.2.4"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = 3     # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
